Fixing alignment issues

--- a/resources/assets/sass/components/header.scss
+++ b/resources/assets/sass/components/header.scss
@@ -25,7 +25,7 @@
             max-width: 175px;
             @include media-breakpoint-up(md) {
                 max-width: unset;
-                height: 60px;
+                height: 55px;
             }
         }
     }
